# alien-network-discord-bot

./: Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: main.yaml
src/: main.rs  utils.rs
src/api/: anilist.rs  mod.rs  tmdb.rs
src/commands/: announce.rs  mod.rs  shuffle.rs
