[package]
name = "alien-network-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.34.0", features = ["macros", "signal", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8.5"

[profile.release]
strip = true